--- a/manufacturing/templates/manufacturing/manufacturingorder_detail.html
+++ b/manufacturing/templates/manufacturing/manufacturingorder_detail.html
@@ -18,16 +18,23 @@
                         <div class="col-md-6 text-end">
                             <a href="{% url 'manufacturing:order_list' %}" class="btn btn-secondary">
                                 <i class="fas fa-arrow-left"></i> العودة للقائمة
-                    </a>
-                            <a href="{% url 'manufacturing:order_update' manufacturing_order.id %}" class="btn btn-primary">
-                                <i class="fas fa-edit"></i> تعديل
-                    </a>
+                            </a>
+                            {% if perms.manufacturing.change_manufacturingorder %}
+                                <a href="{% url 'manufacturing:order_update' manufacturing_order.id %}" class="btn btn-primary">
+                                    <i class="fas fa-edit"></i> تعديل
+                                </a>
+                            {% endif %}
+                            {% if perms.manufacturing.delete_manufacturingorder %}
+                                <a href="{% url 'manufacturing:order_delete' manufacturing_order.id %}" class="btn btn-danger">
+                                    <i class="fas fa-trash"></i> حذف
+                                </a>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <div class="card-body">
+                <div class="card-body">
                     <div class="row">
-                <div class="col-md-6">
+                        <div class="col-md-6">
                             <h5>معلومات أساسية</h5>
                             <table class="table table-sm">
                                 <tr>
